<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/auth"
    app:startDestination="@id/signInFragment">
    <fragment
        android:id="@+id/signInFragment"
        android:name="multi.platform.auth.shared.app.signin.SignInFragment"
        android:label="SignInFragment">
        <deepLink
            android:autoVerify="true"
            app:uri="@string/route_auth_sign_in" />
    </fragment>
    <dialog
        android:id="@+id/otpDialogFragment"
        android:name="multi.platform.auth.shared.app.otpdialog.OtpDialogFragment"
        android:label="OtpDialogFragment">
        <deepLink
            android:autoVerify="true"
            app:uri="@string/route_auth_otp" />
    </dialog>
    <dialog
        android:id="@+id/forgetPasswordDialogFragment"
        android:name="multi.platform.auth.shared.app.forgetpassworddialog.ForgetPasswordDialogFragment"
        android:label="ForgetPasswordDialogFragment">
        <deepLink
            android:autoVerify="true"
            app:uri="@string/route_auth_forget_password" />
    </dialog>
    <fragment
        android:id="@+id/registerFragment"
        android:name="multi.platform.auth.shared.app.register.RegisterFragment"
        android:label="RegisterFragment">
        <deepLink
            android:autoVerify="true"
            app:uri="@string/route_auth_register" />
    </fragment>
    <dialog
        android:id="@+id/authSignOutDialogFragment"
        android:name="multi.platform.auth.shared.app.signoutdialog.SignOutDialogFragment"
        android:label="SignOutDialogFragment">
        <deepLink
            android:autoVerify="true"
            app:uri="@string/route_auth_sign_out" />
    </dialog>
    <dialog
        android:id="@+id/errorConnectionDialogFragment"
        android:name="multi.platform.core.shared.app.errorconnectiondialog.ErrorConnectionDialogFragment"
        android:label="ErrorConnectionDialogFragment">
        <deepLink
            android:autoVerify="true"
            app:uri="@string/route_auth_error_connection" />
    </dialog>
</navigation>