<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="multi.platform.auth.shared.app.signoutdialog.SignOutViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="22dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round16"
            android:padding="22dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_signout_title"
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signout_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_signout_subtitle"
                style="@style/TextAppearance.MaterialComponents.Body2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/signout_sub_title"
                app:layout_constraintTop_toBottomOf="@id/tv_signout_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_signout_no"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:onClick="@{() -> vm.cancel()}"
                android:text="@string/signout_no"
                app:layout_constraintEnd_toStartOf="@id/mb_signout_yes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_signout_subtitle" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/mb_signout_yes"
                style="@style/Widget.Material3.Button"
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="23dp"
                android:text="@string/signout_yes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/mb_signout_no"
                app:layout_constraintTop_toBottomOf="@id/tv_signout_subtitle" />

            <include
                android:id="@+id/loading_view"
                layout="@layout/auth_loading_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>