<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="multi.platform.auth.shared.app.register.RegisterViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_avatar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:padding="24dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="150dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/iv_avatar"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:contentDescription="@null"
                        android:scaleType="centerCrop"
                        android:src="?attr/colorPrimary" />

                </androidx.cardview.widget.CardView>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/add_avatar"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:text="@string/register_add_avatar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_avatar" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_name"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="@string/register_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/add_avatar" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    style="@style/ThemeOverlay.Material3.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/register_name_hint"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions"
                    android:lines="1"
                    android:text="@={vm.name}"
                    app:layout_constraintTop_toBottomOf="@id/tv_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_name_error"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{vm.nameError != null ? vm.nameError : ``}"
                    android:textColor="?attr/colorError"
                    android:visibility="@{vm.nameError != null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@id/et_name" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_bio"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/register_bio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_error" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_bio_length"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@{vm.bio != null ? vm.bio.length() +`/100` : `0/100`}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/et_name" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_bio"
                    style="@style/ThemeOverlay.Material3.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/register_bio_hint"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions|textMultiLine"
                    android:maxLength="100"
                    android:text="@={vm.bio}"
                    app:layout_constraintTop_toBottomOf="@id/tv_bio" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_bio_error"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{vm.bioError != null ? vm.bioError : ``}"
                    android:textColor="?attr/colorError"
                    android:visibility="@{vm.bioError != null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@id/et_bio" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_email"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/register_email"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_bio_error" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/ThemeOverlay.Material3.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:hint="@string/register_email_hint"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions|textEmailAddress"
                    android:text="@={vm.email}"
                    app:layout_constraintTop_toBottomOf="@id/tv_email" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_email_error"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{vm.emailError != null ? vm.emailError : ``}"
                    android:textColor="?attr/colorError"
                    android:visibility="@{vm.emailError != null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@id/et_email" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_phone"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/register_phone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_email_error" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_country"
                    style="@style/ThemeOverlay.Material3.TextInputEditText"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="8dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:importantForAutofill="no"
                    android:inputType="textNoSuggestions"
                    android:lines="1"
                    android:text="@={vm.country}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_phone" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phone"
                    style="@style/ThemeOverlay.Material3.TextInputEditText"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:digits="1234567890"
                    android:hint="@string/register_phone_hint"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:lines="1"
                    android:text="@={vm.phone}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/et_country"
                    app:layout_constraintTop_toBottomOf="@id/tv_phone" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_phone_error"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{vm.phoneError != null ? vm.phoneError : ``}"
                    android:textColor="?attr/errorColor"
                    android:visibility="@{vm.phoneError != null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintTop_toBottomOf="@id/et_phone" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/tv_phone_error">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_password"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/register_password"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        style="@style/ThemeOverlay.Material3.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:hint="@string/register_password_hint"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions|textPassword"
                        android:text="@={vm.password}"
                        app:layout_constraintTop_toBottomOf="@id/tv_password" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_password_error"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@{vm.passwordError != null ? vm.passwordError : ``}"
                        android:textColor="?attr/colorError"
                        android:visibility="@{vm.passwordError != null ? View.VISIBLE : View.GONE}"
                        app:layout_constraintTop_toBottomOf="@id/et_password" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_password_confirm"
                        style="@style/TextAppearance.AppCompat.Body1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/register_password_confirm"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_password_error" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password_confirm"
                        style="@style/ThemeOverlay.Material3.TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="4dp"
                        android:hint="@string/register_password_confirm_hint"
                        android:importantForAutofill="no"
                        android:inputType="textNoSuggestions|textPassword"
                        android:text="@={vm.passwordConfirm}"
                        app:layout_constraintTop_toBottomOf="@id/tv_password_confirm" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/tv_password_confirm_error"
                        style="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@{vm.passwordConfirmError != null ? vm.passwordConfirmError : ``}"
                        android:textColor="?attr/colorError"
                        android:visibility="@{vm.passwordConfirmError != null ? View.VISIBLE : View.GONE}"
                        app:layout_constraintTop_toBottomOf="@id/et_password_confirm" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mb_register"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:enabled="@{vm.name != null &amp;&amp; vm.bio != null &amp;&amp; vm.email != null &amp;&amp; vm.phone != null &amp;&amp; (vm.requirePassword &amp;&amp; vm.password != null &amp;&amp; vm.passwordConfirm != null) &amp;&amp; vm.nameError == null &amp;&amp; vm.bioError == null &amp;&amp; vm.emailError == null &amp;&amp; vm.phoneError == null &amp;&amp; vm.passwordError == null &amp;&amp; vm.passwordConfirmError == null}"
                    android:text="@string/register_continue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_password" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <include
            android:id="@+id/loading_view"
            layout="@layout/auth_loading_view" />

    </RelativeLayout>

</layout>